--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/config/OpenApiConfig.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/config/OpenApiConfig.java.mustache
@@ -19,9 +19,7 @@ public class OpenApiConfig {
         return new OpenAPI().info(
                 new Info().title("{{name}}接口文档")
                         .description("{{description}}")
-                        .contact(buildContact("谢峥嵘", "xzr@peipeiche.com"))
-                        .contact(buildContact("黄朝", "huangchao@peipeiche.com"))
-                        .contact(buildContact("谭亚平", "tan@peipeiche.com"))
+                        .contact(buildContact("wiflish", "wiflish@qq.com"))
                         .version("1.0")
         );
     }
