--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/service/impl/TaskServiceImpl.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/service/impl/TaskServiceImpl.java.mustache
@@ -1,10 +1,9 @@
 package {{packageName}}.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
-import com.wiflish.luban.core.dto.OneResponse;
-import com.wiflish.luban.core.dto.PageResponse;
 import com.wiflish.luban.core.dto.Response;
 import com.wiflish.luban.core.dto.exception.Assert;
+import java.util.List;
 import {{packageName}}.domain.entity.Task;
 import {{packageName}}.domain.repository.TaskRepository;
 import {{packageName}}.domain.service.TaskSyncDomainService;
@@ -33,14 +32,12 @@ public class TaskServiceImpl implements TaskService {
     private TaskRepository taskRepository;
 
     @Override
-    public OneResponse<Long> addTask(AddTaskCmd addTaskCmd) {
-        Assert.notNull(addTaskCmd.getName(), "task.name不能为null");
-
+    public Response<Long> addTask(AddTaskCmd addTaskCmd) {
         Task task = BeanUtil.copyProperties(addTaskCmd, Task.class);
 
         task.todo();
 
-        return OneResponse.of(task.getId());
+        return Response.of(task.getId());
     }
 
     @Override
@@ -65,15 +62,15 @@ public class TaskServiceImpl implements TaskService {
     }
 
     @Override
-    public PageResponse<TaskDTO> pagedTasks(TaskQuery query) {
+    public Response<List<TaskDTO>> pagedTasks(TaskQuery query) {
          return taskRepository.selectByCriteria(query);
     }
 
     @Override
-    public OneResponse<TaskDTO> getTaskById(Long taskId) {
+    public Response<TaskDTO> getTaskById(Long taskId) {
         Task task = taskRepository.selectById(taskId);
         TaskDTO taskDTO = TaskConverter.toTaskDTO(task);
 
-        return OneResponse.of(taskDTO);
+        return Response.of(taskDTO);
     }
 }
