ddd项目代码重构.

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-api/src/main/java/dto/TaskDTO.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-api/src/main/java/dto/TaskDTO.java.mustache
@@ -1,6 +1,6 @@
 package {{packageName}}.dto;
 
-import com.wiflish.luban.core.dto.BaseDTO;
+import com.wiflish.luban.core.dto.DTO;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 
