--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/ddd-app/src/main/java/{applicationName}Application.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/ddd-app/src/main/java/{applicationName}Application.java.mustache
@@ -1,5 +1,6 @@
 package {{packageName}};
 
+import org.mybatis.spring.annotation.MapperScan;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.ComponentScan;
@@ -7,13 +8,14 @@ import org.springframework.context.annotation.ComponentScan;
 /**
  * 启动类
  *
- * @author wiflish
+ * @author {{author}}
  * @since {{currentDate}}
  */
 @SpringBootApplication
 @ComponentScan(value = {"{{packageName}}", "com.wiflish.luban"})
+@MapperScan("{{packageName}}.**.infra.mapper")
 public class {{applicationName}}Application {
     public static void main(String[] args) {
-        SpringApplication.run({{applicationName}}.class, args);
+        SpringApplication.run({{applicationName}}Application.class, args);
     }
 }
