修改ddd项目骨架的模板文件

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/ddd-app/pom.xml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/ddd-app/pom.xml.mustache
@@ -65,7 +65,7 @@
         </dependency>
         {{/mysql}}
 
-        {{#mybatis}}
+        {{#mybatis-plus}}
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -78,7 +78,7 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
-        {{/mybatis}}
+        {{/mybatis-plus}}
 
         {{#nacos}}
         <dependency>
