--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/ddd-app/src/main/resources/application.yml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/ddd-app/src/main/resources/application.yml.mustache
@@ -72,13 +72,13 @@ spring:
       mode: always
 {{/mysql}}
 
-{{#mybatis}}
+{{#mybatis-plus}}
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       logic-delete-field: deleted
-{{/mybatis}}
+{{/mybatis-plus}}
 
 {{#spring-security}}
 logging:
