--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/pom.xml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/luban-ddd/pom.xml.mustache
@@ -94,7 +94,7 @@
                 <version>${luban.core.version}</version>
             </dependency>
 
-            {{#mybatis}}
+            {{#mybatis-plus}}
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -110,7 +110,7 @@
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>${mybatis.plus.version}</version>
             </dependency>
-            {{/mybatis}}
+            {{/mybatis-plus}}
 
             {{#mysql}}
             <dependency>
@@ -201,7 +201,7 @@
                 <version>${spring.boot.version}</version>
                 <scope>test</scope>
             </dependency>
-            {{#mybatis}}
+            {{#mybatis-plus}}
             <dependency>
                 <groupId>org.mybatis.scripting</groupId>
                 <artifactId>mybatis-freemarker</artifactId>
@@ -214,7 +214,7 @@
                 <version>${mybatis.plus.generator.version}</version>
                 <scope>test</scope>
             </dependency>
-            {{/mybatis}}
+            {{/mybatis-plus}}
         </dependencies>
     </dependencyManagement>
 
