--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/pom.xml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/pom.xml.mustache
@@ -5,10 +5,9 @@
         <groupId>{{groupId}}</groupId>
         <artifactId>{{artifactId}}</artifactId>
         <version>{{version}}</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>{{artifactId}}-app</artifactId>
-    <name>{{artifactId}}-app</name>
+    <name>${project.artifactId}</name>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
@@ -16,21 +15,70 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.wiflish.luban</groupId>
+            <artifactId>luban-service</artifactId>
+        </dependency>
+        <dependency>
             <groupId>{{groupId}}</groupId>
             <artifactId>{{artifactId}}-api</artifactId>
         </dependency>
         <dependency>
             <groupId>{{groupId}}</groupId>
-            <artifactId>{{artifactId}}-infra</artifactId>
+            <artifactId>{{artifactId}}-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
+            <groupId>com.wiflish.luban</groupId>
+            <artifactId>luban-mybatis-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wiflish.luban</groupId>
+            <artifactId>luban-web-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+
+        {{#h2}}
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        {{/h2}}
+
+        {{#mysql}}
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        {{/mysql}}
+
+        {{#mybatis-plus}}
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.scripting</groupId>
+            <artifactId>mybatis-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+        </dependency>
+        {{/mybatis-plus}}
 
         {{#nacos}}
         <dependency>
@@ -70,6 +118,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
