--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/config/ThreadPoolConfig.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/config/ThreadPoolConfig.java.mustache
@@ -9,7 +9,7 @@ import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 /**
  * 全局线程池配置.
  *
- * @author wiflish
+ * @author {{author}}
  * @since {{currentDate}}
  */
 @Configuration
@@ -19,7 +19,7 @@ public class ThreadPoolConfig {
     public ThreadPoolTaskExecutor threadPoolTaskExecutor() {
         ThreadPoolTaskExecutor executor = new ThreadPoolTaskExecutor();
 
-        executor.setThreadNamePrefix("{{name}}-");
+        executor.setThreadNamePrefix("{{artifactId}}-");
         executor.setCorePoolSize(Runtime.getRuntime().availableProcessors());
         executor.setQueueCapacity(Runtime.getRuntime().availableProcessors());
         executor.setMaxPoolSize(Runtime.getRuntime().availableProcessors() * 2);
