修改ddd项目骨架的模板文件

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-api/src/main/java/api/constant/DefaultErrorCodeConstant.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-api/src/main/java/api/constant/DefaultErrorCodeConstant.java.mustache
@@ -17,7 +17,7 @@
  * limitations under the License.
  * ************
  */
-package {{packageName}}.constant;
+package {{packageName}}.api.constant;
 
 import com.wiflish.luban.core.dto.exception.BaseErrorCodeConstant;
 import com.wiflish.luban.core.dto.exception.ErrorCode;
