autofill处理,当没有登录用户时，默认0.

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/resources/application.yml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/resources/application.yml.mustache
@@ -74,6 +74,7 @@ spring:
 
 {{#mybatis-plus}}
 mybatis-plus:
+  type-handlers-package: com.wiflish.luban.core.mybatis.typehandler
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
@@ -92,11 +93,6 @@ springdoc:
   api-docs:
     enabled: true
 {{/springdoc}}
-
-luban:
-  mybatis:
-    autofill:
-      enable: false
 
 ---
 # 生产环境配置.
