luban-generator生成器，生成ddd结构的业务代码。

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/resources/application.yml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/resources/application.yml.mustache
@@ -68,7 +68,7 @@ spring:
       async-init: true
   sql:
     init:
-      schema-locations: classpath:mysql/schema.sql
+      schema-locations: optional:classpath:mysql/schema.sql
       mode: always
 {{/mysql}}
 
