修改项目骨架模板。

--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/app/controller/package-info.java.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/ddd-app/src/main/java/app/controller/package-info.java.mustache
@@ -4,4 +4,4 @@
  * @author {{author}}
  * @since {{currentDate}}
  */
-package {{packageName}}.app.web.controller;
+package {{packageName}}.app.controller;
