--- a/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/pom.xml.mustache
+++ b/luban-initializr/luban-initializr-generator/src/main/resources/templates/ddd/pom.xml.mustache
@@ -37,6 +37,24 @@
         <!-- test -->
         <junit.version>4.13.2</junit.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.9.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
+        </plugins>
+    </build>
     <dependencyManagement>
         <dependencies>
             <dependency>
